# ComfyUI_DriveSendNode

./: .gitignore  LICENSE  README.md  __init__.py  decrypt_folder.py  drivesend_setup_node.py  drivesend_uploader_node.py  encrypt_file.py  gdrive_auth_manager.py  gdrive_upload.py  monitor_output.py  pyproject.toml  requirements.txt
scripts/: decrypt_folder.py
scripts/linux/: decrypt_folder_linux.sh  encrypt_folder_linux.sh
scripts/mac/: decrypt_folder_mac.sh  encrypt_folder_mac.sh
scripts/win/: decrypt_folder_win.py  encrypt_folder_win.py
